@@ -1,4 +1,9 @@
 
+Next
+ - Added a response qualifier argument to ``read`` so that
+   you can elect to accept responses with alternate status
+   codes or restrict based on other criteria.
+
 0.1.4
  - Changed request.body in ServerRequest from a promise to
    fulfilled IO Reader with read and forEach.
